[gd_scene load_steps=4 format=3 uid="uid://tx4gdu5pud15"]

[ext_resource type="Script" uid="uid://c5rsghyxggffp" path="res://dialogue_box.gd" id="1_fu8b5"]
[ext_resource type="FontFile" uid="uid://dgflgjex8tnq2" path="res://VCR_OSD_MONO_1.001.ttf" id="2_n23yb"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_0ota6"]
bg_color = Color(0, 0, 0, 1)
border_width_left = 4
border_width_top = 4
border_width_right = 4
border_width_bottom = 4
border_color = Color(0, 0, 0, 1)

[node name="DialogueBox" type="CanvasLayer"]
process_mode = 3
script = ExtResource("1_fu8b5")

[node name="DialogueBoxContainer" type="MarginContainer" parent="."]
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -4.0
offset_top = -446.0
offset_right = 29.0
offset_bottom = 32.0
grow_horizontal = 2
grow_vertical = 0
mouse_default_cursor_shape = 2
theme_override_constants/margin_left = 32
theme_override_constants/margin_right = 32
theme_override_constants/margin_bottom = 32

[node name="Panel" type="Panel" parent="DialogueBoxContainer"]
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_0ota6")

[node name="MarginContainer" type="MarginContainer" parent="DialogueBoxContainer"]
layout_mode = 2
theme_override_constants/margin_left = 16
theme_override_constants/margin_top = 16
theme_override_constants/margin_right = 16
theme_override_constants/margin_bottom = 16

[node name="HBoxContainer" type="HBoxContainer" parent="DialogueBoxContainer/MarginContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="DialogueBoxContainer/MarginContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 1
theme_override_fonts/font = ExtResource("2_n23yb")
theme_override_font_sizes/font_size = 32
text = "Placeholder Text! Mais intendido!!!"
autowrap_mode = 2
clip_text = true

[node name="EndSymbol" type="Label" parent="DialogueBoxContainer/MarginContainer/HBoxContainer"]
custom_minimum_size = Vector2(19, 0)
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 8
mouse_filter = 0
theme_override_font_sizes/font_size = 32
text = ">"

[node name="TypingSoundPlayer" type="AudioStreamPlayer" parent="."]
volume_db = -20.0

[node name="TypingTimer" type="Timer" parent="."]
wait_time = 0.05

[connection signal="timeout" from="TypingTimer" to="." method="_on_typing_timer_timeout"]
